--- a/Prakriti-App/app.json
+++ b/Prakriti-App/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Prakriti-User-App",
-    "slug": "Prakriti-User-App",
+    "name": "Prakriti-App",
+    "slug": "Prakriti-App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/prakriti.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -17,13 +17,16 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/prakriti.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/prakriti.png"
+    },
+    "plugins": [
+      "expo-video"
+    ]
   }
 }
