--- a/Prakriti-App/package.json
+++ b/Prakriti-App/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "expo": "~54.0.22",
+    "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "^15.0.7",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.14",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
